[package]
name = "roo-cli"
description = "A simple command line tool to find a file and call another app with the found one as argument"
version = "0.0.7"
authors = ["Rafael Merlin"]
edition = "2018"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rafamerlin/roo"
repository = "https://github.com/rafamerlin/roo"
keywords = ["cli", "search"]

[[bin]]
name = "roo"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.17", features = ["derive"]}
walkdir = "2.3.2"
anyhow = "1.0.62"
config = "0.13.2"
serde = { version = "1.0.143", features = ["derive"] }
dialoguer = "0.10.2"
dirs-next = "2.0.0"
timer = "0.2.0"
chrono = "0.4.22"