[package]
name = "roo-cli"
description = "A simple command line tool to find a file and call another app with the found one as argument"
version = "0.0.8"
authors = ["Rafael Merlin"]
edition = "2018"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rafamerlin/roo"
repository = "https://github.com/rafamerlin/roo"
keywords = ["cli", "search"]

[[bin]]
name = "roo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.56", features = ["derive"]}

anyhow = "1.0.100"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
dialoguer = "0.12"
dirs-next = "2.0.0"
timer = "0.2.0"
chrono = "0.4.43"